--- a/assets/scss/templates/_portfolio.scss
+++ b/assets/scss/templates/_portfolio.scss
@@ -94,7 +94,7 @@
 
 // Portfolio Single Page
 .portfolio-single-page {
-  .project-details {
+  .san-pham-chi-tiet {
     h4 {
       margin-bottom: 20px;
       padding-bottom: 10px;
