--- a/layouts/san-pham/single.html
+++ b/layouts/san-pham/single.html
@@ -13,8 +13,8 @@
         {{ end }}
       </div>
       <div class="col-md-4">
-        <div class="san-pham-chi-tiet">
-          <h4>Sản phẩm chi tiết</h4>
+        <div class="thong-so-ky-thuat">
+          <h4>Thông số kỹ thuật</h4>
           <ul>
             {{ range .Params.information }}
             <li><span>{{ .label }} :</span> <strong>{{ .info | markdownify }}</strong></li>
